fix logout button align

--- a/src/components/post/post.css
+++ b/src/components/post/post.css
@@ -2,15 +2,14 @@
 
 .post {
   white-space: pre-wrap;
-
   margin-bottom: 20px;
   border: none;
-  padding: 0px 5px;
+
 
   overflow: hidden;
   display: inline-block;
-  max-width: 700px !important;
-  width: 90%;
+
+
   color: #1e2022;
   overflow: hidden;
   border-radius: 8px;
@@ -18,10 +17,12 @@
   background-color: #fff;
   color: #223354 !important;
   max-width: 640px !important;
-  width: 90%;
-  letter-spacing: 0.5px;
-  height: auto;
-  -webkit-box-shadow: 0 1px 2px 0 rgb(60 64 67 / 30%), 0 1px 3px 1px rgb(60 64 67 / 15%);
+  width: 96%;
+  max-width: 700px !important;
+
+  border: 1px solid #dbdbdb;
+  -webkit-box-shadow: 0 1px 2px 0 rgb(60 64 67 / 30%),
+    0 1px 3px 1px rgb(60 64 67 / 15%);
   box-shadow: 0 1px 2px 0 rgb(60 64 67 / 30%), 0 1px 3px 1px rgb(60 64 67 / 15%);
 }
 
@@ -29,10 +30,8 @@
   display: flex;
   justify-content: space-between;
   flex-direction: row;
-
   padding: 16px 0px 16px 20px;
   border-bottom: 1px solid #e0fbfc;
-
   min-height: fit-content;
 
 }
@@ -49,29 +48,9 @@
 
 
 
-.postText {
-  padding: 5px 10px;
-  font-style: normal;
-  display: block;
-  margin-block-start: 1em;
-  margin-block-end: 1em;
-  margin-inline-start: 0px;
-  margin-inline-end: 0px;
-  font-weight: 500;
-
-  font-size: 16px;
-  font-weight: 400;
-  overflow-x: hidden;
-
-  -webkit-font-smoothing: antialiased;
-  white-space: pre-wrap;
-  color: #262626;
-}
-
-
 .postProfileImg {
-  width: 52px;
-  height: 52px;
+  width: 47px;
+  height: 47px;
   border-radius: 50%;
   object-fit: cover;
 }
@@ -84,38 +63,55 @@
 
 .postUserName {
   display: block;
-  font-size: 1.2rem !important;
   color: #2b2b2b;
-  font-weight: 700 !important;
+
   margin: 0 10px;
 }
 
 .postDate {
   font-size: 10px;
-
 }
 
 .postCenter {
   overflow: hidden;
   box-sizing: border-box;
   margin-top: 0px;
-
-
-
+  padding: 0px 2px;
 }
 
 .lazy-load-image-background.blur.lazy-load-image-loaded {
-  width: 100%;
-  padding: 0;
   background-color: #1e2022;
+  width: 100%;
+
+}
+
+
+
+.caption {
+  -webkit-box-flex: 1;
+  margin-top: 0;
+  color: #262626;
+  padding: 0px 5px;
+}
+
+.postText {
+
+  font-style: normal;
+  font-size: 14px;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
+  vertical-align: baseline;
+  font-weight: 400;
+  -webkit-font-smoothing: antialiased;
+  white-space: pre-wrap;
 }
 
 
 
 .postBottom {
-
-
   color: #262626;
+  padding: 0;
+  margin: 0;
+
 }
 
 .postBottomLeft {
@@ -127,7 +123,8 @@
   padding: 0;
   width: fit-content;
   position: relative;
-  left: -20px;
+  left: -40px;
+
 }
 
 
@@ -143,11 +140,11 @@
 
 .postLikeCounter {
   font-size: 12px !important;
-
   color: #262626;
   font-weight: 600 !important;
   position: relative;
-  left: -20px;
+  left: -15px;
+  top: 0px;
 
 }
 
@@ -172,8 +169,7 @@
   }
 
   .postBottomLeft {
-
-    left: -30px;
+    left: -40px;
   }
 
   .lazy-load-image-background.blur.lazy-load-image-loaded img {
@@ -185,10 +181,12 @@
   }
 }
 
+
+
 @media(min-width:801px) {
   .lazy-load-image-background.blur.lazy-load-image-loaded img {
     width: 100%;
-    max-height: 90vh;
+    max-height: 100vh;
     height: fit-content;
     object-fit: contain;
     background-position: center;
@@ -201,7 +199,11 @@
   -moz-transition: all 2s ease-in-out;
   -o-transition: all 2s ease-in-out;
   transition: all 2s ease-in-out;
+
 }
+
+
+
 
 .transit {
 
