--- a/src/components/share/share.css
+++ b/src/components/share/share.css
@@ -48,6 +48,8 @@
   margin-inline-end: 0px;
   font-weight: 500;
   color: #09736c;
+  background-color: #f3f6f9;
+  border: 1px solid #999a9b;
 }
 
 .shareInput:focus {
@@ -69,11 +71,17 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+
+  display: flex;
+  flex-direction: column;
 }
 
 .shareOptions {
   display: flex;
   margin-left: 20px;
+
+  justify-content: space-evenly;
+  width: 100%;
 }
 
 .shareOption {
@@ -100,7 +108,8 @@
 }
 
 .shareImgContainer {
-  padding: 0 20px 10px 20px;
+  padding: 10px 20px;
+
   position: relative;
   width: 100%;
   height: 400px !important;
@@ -108,18 +117,22 @@
 
 .shareImg {
   width: 100%;
-  max-height: 380px;
-  object-fit: contain;
+  height: 100%;
+  object-fit: fill;
 }
 
 .shareCancelImg {
   position: absolute;
-  top: 0;
+  top: 10px;
   right: 20px;
   cursor: pointer;
-  opacity: 0.9;
-  color: #019ef8 !important;
+  opacity: 1;
+  margin: 0;
+  padding: 0;
+  color: crimson !important;
   font-size: 30px !important;
+  background-color: #09736c;
+  border-radius: 50%;
 }
 
 .update_status {
@@ -153,7 +166,7 @@
   background-repeat: repeat;
   color: rgb(255, 255, 255);
 
-  border: 0px none rgb(255, 255, 255);
+
   border-top: 0px none rgb(255, 255, 255);
   border-right: 0px none rgb(255, 255, 255);
   border-bottom: 0px none rgb(255, 255, 255);
@@ -164,6 +177,7 @@
   min-height: auto;
   max-width: none;
   min-width: auto;
+
 }
 
 .toggle_post {
